--- a/Parte_Práctica (1).ipynb
+++ b/Parte_Práctica (1).ipynb
@@ -251,6 +251,8 @@
         "\n",
         "-Nixon Estiven Santos Trillos\n",
         "\n",
+         "-Mateo Donoso Pisciotty González\n",
+        "\n",
         "#**Introducción:**\n",
         "En este contexto, las variables el cual se va a analizar son el tiempo de gestación (T_GES) y la talla de nacimiento (TALLA_NAC). Donde el objetivo es ver si existe una correlación entre estas dos variables.\n",
         "\n",
